changed templates to git templates

--- a/project_gen/my_templates/project/{{cookiecutter.project_slug}}/testproject.toml
+++ b/project_gen/my_templates/project/{{cookiecutter.project_slug}}/testproject.toml
@@ -8,3 +8,4 @@ base_url="http://5.63.153.31:8085/v1/"
 [[http]]
 service_name = "service#2"
 swagger_url="http://example_host/some_another_api/exampleservise#2/swagger.json"
+base_url="http://5.63.153.31:8085/v1/"
